--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -24,6 +24,10 @@ html
         small &copy; Esra Aydoğan 2022
 
 
-  script (src='/javascripts/jquery-3.6.1.min.js')
-  script (src='/bootstrap/js/bootstrap.min.js')
+  script(src='/javascripts/jquery-3.6.1.min.js')
+  script(src='/javascripts/denetle.js')
+  script(src='/bootstrap/js/bootstrap.min.js')
+
+  
+
 
