--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -1,9 +1,9 @@
 doctype html
 html
   head
-  meta(name='viewport',content='width=device-width,initial-scale=1.0')
+  meta(name='viewport' content='width=device-width,initial-scale=1.0')
   title= baslik
-  link(rel='stylesheet', href='/bootstrap/css/bootstrap.css')
+  link(rel='stylesheet'  href='/bootstrap/css/bootstrap.css')
   body
     .navbar-default.navbar.navbar-fixed-top 
       .container 
